; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/fir/extr_toh.c_main.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/fir/extr_toh.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdin = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"%lf\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"%ld,\0A\00", align 1
@MAX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca [256 x i8], align 16
  %3 = alloca i32, align 4
  %4 = alloca double, align 8
  store i32 0, i32* %1, align 4
  store i32 0, i32* %3, align 4
  br label %5

5:                                                ; preds = %27, %0
  %6 = getelementptr inbounds [256 x i8], [256 x i8]* %2, i64 0, i64 0
  %7 = load i32, i32* @stdin, align 4
  %8 = call i64 @fgets(i8* %6, i32 256, i32 %7)
  %9 = icmp sgt i64 %8, 0
  br i1 %9, label %10, label %28

10:                                               ; preds = %5
  %11 = getelementptr inbounds [256 x i8], [256 x i8]* %2, i64 0, i64 0
  %12 = call i32 @sscanf(i8* %11, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), double* %4)
  %13 = icmp eq i32 %12, 1
  br i1 %13, label %14, label %27

14:                                               ; preds = %10
  %15 = load double, double* %4, align 8
  %16 = fmul double %15, 0x4130000000000000
  store double %16, double* %4, align 8
  %17 = load double, double* %4, align 8
  %18 = fptosi double %17 to i64
  %19 = call i32 @printf(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i64 %18)
  %20 = load i32, i32* %3, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %3, align 4
  %22 = load i32, i32* %3, align 4
  %23 = load i32, i32* @MAX, align 4
  %24 = icmp eq i32 %22, %23
  br i1 %24, label %25, label %26

25:                                               ; preds = %14
  br label %28

26:                                               ; preds = %14
  br label %27

27:                                               ; preds = %26, %10
  br label %5

28:                                               ; preds = %25, %5
  %29 = load i32, i32* %1, align 4
  ret i32 %29
}

declare dso_local i64 @fgets(i8*, i32, i32) #1

declare dso_local i32 @sscanf(i8*, i8*, double*) #1

declare dso_local i32 @printf(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
